--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@ body {
 .container {
     background-image: url(./images/pattern-background-desktop.svg);
     background-color: var(--pale-blue);
+    background-size: contain;
     background-repeat: no-repeat;
     height: 100vh;
     display: flex;
