--- a/style.css
+++ b/style.css
@@ -19,6 +19,7 @@ weights 500, 700, 900 */
 body {
     margin: 0;
     text-align: center;
+    font-family: "Red Hat Display";
 }
 
 .container {
@@ -33,7 +34,8 @@ body {
 }
 
 .card {
-    width: 350px;
+    width: 400px;
+    height: 600px;
     border-radius: 15px;
     background-color: white;
 
@@ -48,4 +50,69 @@ body {
     margin: 20px;
 }
 
-.title {}
+.title {
+    font-size: 22px;
+    font-weight: 900;
+    padding-top: 10px;
+
+}
+
+.body-text {
+    font-size: 16px;
+    font-weight: 500;
+    color: var(--desaturated-blue);
+    padding-bottom: 10px;
+}
+
+.pricing-area {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: var(--very-pale-blue);
+    border-radius: 10px;
+    padding: 15px 20px 15px 20px;
+    margin: 10px;
+}
+
+.pricing {
+    padding-right: 70px;
+    line-height: 0.4;
+}
+
+.annual-plan {
+    font-weight: 900;
+}
+
+.price {
+    color: var(--desaturated-blue);
+}
+
+.hyperlink {
+    font-size: 14px;
+    color: var(--bright-blue);
+    font-weight: 700;
+}
+
+.btn {
+    background-color: var(--bright-blue);
+    color: white;
+    font-weight: 700;
+    border-radius: 9px;
+    height: 45px;
+    width: 94%;
+    margin-top: 15px;
+}
+
+.cancel-order {
+    font-size: 14px;
+    font-weight: 700;
+    color: var(--desaturated-blue);
+    padding: 12px;
+}
+
+.footer {
+    text-align: center;
+    font-size: 14px;
+    background-color: var(--pale-blue);
+    padding: 20px;
+}
