--- a/style.css
+++ b/style.css
@@ -35,9 +35,10 @@ body {
 
 .card {
     width: 400px;
-    height: 600px;
+    height: 630px;
     border-radius: 15px;
     background-color: white;
+    box-shadow: 1px 8px 10px -10px;
 
 }
 
@@ -51,17 +52,19 @@ body {
 }
 
 .title {
-    font-size: 22px;
+    font-size: 25px;
     font-weight: 900;
     padding-top: 10px;
 
 }
 
 .body-text {
-    font-size: 16px;
+    font-size: 14px;
     font-weight: 500;
     color: var(--desaturated-blue);
     padding-bottom: 10px;
+    line-height: 1.5;
+    padding: 0 20px 0 20px;
 }
 
 .pricing-area {
@@ -71,7 +74,7 @@ body {
     background-color: var(--very-pale-blue);
     border-radius: 10px;
     padding: 15px 20px 15px 20px;
-    margin: 10px;
+    margin: 20px;
 }
 
 .pricing {
@@ -98,16 +101,20 @@ body {
     color: white;
     font-weight: 700;
     border-radius: 9px;
+    border: none;
     height: 45px;
-    width: 94%;
+    width: 89%;
     margin-top: 15px;
+    box-shadow: 1px 8px 20px -10px black;
+
+
 }
 
 .cancel-order {
     font-size: 14px;
     font-weight: 700;
     color: var(--desaturated-blue);
-    padding: 12px;
+    padding: 10px;
 }
 
 .footer {
